Fix eww bar issues with height and spacing

--- a/.config/eww/eww.scss
+++ b/.config/eww/eww.scss
@@ -19,12 +19,13 @@
 .dunst label,
 .player-controls label,
 .workspace label {
-  padding-left: 5px;
-  padding-right: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .workspace {
   color: #404e65;
+
 }
 
 
